--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -9,10 +9,19 @@
   <body>
     {% include "navbar.html" %}
     <div class='container'>
-        <br>
+      {% if messages %}
+        {% for message in messages %}
+          <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            {{ message }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>  
+        {% endfor %}
+      {% endif %}
+    </br>
+        <div  class="d-flex align-items-center justify-content-center" style="height: 250px;">
         {% block content %}
-
         {% endblock %}
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
